--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.54</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.glodon</groupId>
+            <artifactId>pcop-cimengine</artifactId>
+            <version>0.0.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
