--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>0.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.bimface</groupId>
+            <artifactId>bimface-java-sdk</artifactId>
+            <version>2.0.5.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
