--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jodconverter.version>4.2.2</jodconverter.version>
     </properties>
 
     <dependencies>
@@ -57,7 +58,11 @@
             <artifactId>bimface-java-sdk</artifactId>
             <version>2.0.5.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jodconverter</groupId>
+            <artifactId>jodconverter-local</artifactId>
+            <version>${jodconverter.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
