--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <artifactId>jodconverter-local</artifactId>
             <version>${jodconverter.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
