--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
     <groupId>cn.com.yuanjk</groupId>
     <artifactId>tools</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <modules>
+        <module>orientdb-hook</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <name>tools</name>
     <url>http://maven.apache.org</url>
