--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>orientdb-hook</module>
+        <module>orientdb-postgis-etl</module>
+        <module>general-utilities</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -64,6 +66,14 @@
                 <exclusion>
                     <groupId>org.geotools</groupId>
                     <artifactId>gt-swing</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>orientdb-graphdb</artifactId>
+                    <groupId>com.orientechnologies</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>orientdb-jdbc</artifactId>
+                    <groupId>com.orientechnologies</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -184,6 +194,13 @@
             <groupId>net.postgis</groupId>
             <artifactId>postgis-geometry</artifactId>
             <version>2.5.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.orientechnologies/orientdb-jdbc -->
+        <!-- https://mvnrepository.com/artifact/com.orientechnologies/orientdb-graphdb -->
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-graphdb</artifactId>
+            <version>3.1.1</version>
         </dependency>
 
     </dependencies>
