add cim util module

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>orientdb-hook</module>
         <module>orientdb-postgis-etl</module>
         <module>general-utilities</module>
+        <module>cim-util</module>
     </modules>
     <packaging>pom</packaging>
 
