--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>orientdb-postgis-etl</module>
         <module>general-utilities</module>
         <module>cim-util</module>
+        <module>ignite-test</module>
     </modules>
     <packaging>pom</packaging>
 
