--- a/general-utilities/pom.xml
+++ b/general-utilities/pom.xml
@@ -125,6 +125,12 @@
             <artifactId>lucene-analyzers-common</artifactId>
             <version>${lucene.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
