--- a/cim-util/pom.xml
+++ b/cim-util/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cim-util</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>crs</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
