--- a/geo-crs/pom.xml
+++ b/geo-crs/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>gt-epsg-extension</artifactId>
             <version>${geotools.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-main</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
     </dependencies>
 
     <repositories>
