--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /data/tmp/
 /ignite/work/db/marshaller/
 /ignite/README.txt
+/orient-kafka-hook/orient-kafka-hook-0.0.1-SNAPSHOT.jar
+/orient-kafka-hook/orient-kafka-hook-0.0.1-SNAPSHOT.jar
