--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>geo-crs</module>
         <module>json-util</module>
         <module>orient-kafka-hook</module>
+        <module>my-ignite</module>
     </modules>
     <packaging>pom</packaging>
 
