--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /ignite/README.txt
 /orient-kafka-hook/orient-kafka-hook-0.0.1-SNAPSHOT.jar
 /orient-kafka-hook/orient-kafka-hook-0.0.1-SNAPSHOT.jar
+/ignite/work/
