--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /orient-kafka-hook/orient-kafka-hook-0.0.1-SNAPSHOT.jar
 /orient-kafka-hook/orient-kafka-hook-0.0.1-SNAPSHOT.jar
 /ignite/work/
+/my-spark/my-spark-0.0.1-SNAPSHOT.jar
+*.tsv
