--- a/general-utilities/pom.xml
+++ b/general-utilities/pom.xml
@@ -131,6 +131,12 @@
             <version>4.13</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 
 
