add geometry intersection function

--- a/geo-crs/pom.xml
+++ b/geo-crs/pom.xml
@@ -39,6 +39,12 @@
             <version>${geotools.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.locationtech</groupId>-->
 <!--            <artifactId>jts</artifactId>-->
